Perf: UI improvements and Test Picker fixes
- Fix test-picker overlap with header.
- Enable test-picker in V2 UI.
- Increase legacy UI sidebar width to 160px.
- Fix flaky test-picker-sk test (timeout).

Reviewed-on: https://skia-review.googlesource.com/c/buildbot/+/1156144
Commit-Queue: Tony Seaward <seawardt@google.com>

--- a/perf/modules/explore-sk/explore-sk.scss
+++ b/perf/modules/explore-sk/explore-sk.scss
@@ -1,7 +1,7 @@
 explore-sk {
   .test-picker {
     margin-left: 16px;
-    margin-top: 8px;
+    margin-top: 30px;
   }
   md-outlined-button {
     --md-outlined-button-container-shape: 4px;
