--- a/perf/modules/perf-scaffold-sk/perf-scaffold-sk.scss
+++ b/perf/modules/perf-scaffold-sk/perf-scaffold-sk.scss
@@ -26,7 +26,7 @@ perf-scaffold-sk app-sk {
 // LEGACY UI
 // =========================================
 perf-scaffold-sk app-sk.legacy-ui {
-  --sidebar-width: 130px;
+  --sidebar-width: 160px;
   height: 100%;
   overflow: hidden;
 
